# llm-vision-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
docs/: amd_usage.md  architecture.md  slide_deck_outline.md
scripts/: download_models.sh  run_demo.sh  setup_rocm.sh
src/: app.py  cli.py  config.py  web_ui.py
src/controller/: input_controller.py
src/llm/: agent.py  prompts.py
src/vision/: detector.py  screen_capture.py
tests/: test_agent.py  test_detector.py
