[project]
name = "llm-vision-agent"
version = "0.1.0"
description = "ScreenSage local vision+LLM agent"
dependencies = [
    "flask>=3.0",
    "flask-socketio>=5.3",
    "eventlet>=0.36",
    "loguru>=0.7",
    "python-dotenv>=1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.vercel]
entrypoint = "src.web_ui:app"
